Fix spacing of @li list items inside things like @param and @return within method documentation.

--- a/docs/src/css/libsbml-doxygen-stylesheet.css
+++ b/docs/src/css/libsbml-doxygen-stylesheet.css
@@ -1171,7 +1171,7 @@ div.toc li.level4 {
 
 #doc-content .memdoc li {
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 0.75em;
 }
 
 #doc-content #main-page-sections li {
